tests/ui/internal_schedule_runner.stderr
error[E0603]: module `schedule` is private
 --> tests/ui/internal_schedule_runner.rs:1:13
  |
1 | use moirai::schedule::runner;
  |             ^^^^^^^^  ------ module `runner` is not publicly re-exported
  |             |
  |             private module
  |
note: the module `schedule` is defined here
 --> src/lib.rs
  |
  | mod schedule;
  | ^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/internal_schedule_runner.rs:1:30
  |
1 | use moirai::schedule::runner;
  |                              ^ consider adding a `main` function to `$DIR/tests/ui/internal_schedule_runner.rs`
